# nazghul

./: .gitignore  AUTHORS  BUGS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  PRESS_RELEASE  README  README.developer  RELEASE_NOTES  aclocal.m4  autogen.sh  configure  configure.ac  configure.in  haxima.desktop  nazghul.nsi
doc/: GAME_DEVELOPERS_GUIDE  GAME_RULES  GHULSCRIPT  MAP_HACKERS_GUIDE  QUESTS  USERS_GUIDE  ZTATS_PANES  users_guide.html
doc/engine_extension_and_design/: ENGINE_CLEANUP  ENGINE_DESIGN_NOTES  README  my_TODO.2004.05.05.txt
doc/world_building/: advancement.rogue.txt  advancement.warrior.txt  advancement.wizard.txt  advancement.wright.txt  being_tile_media.txt  sound_sample_media.txt  town_scale_tile_media.txt  wilderness_scale_tile_media.txt
examples/: .console  Makefile.am  Makefile.in  dup_constants.h  mapfile
examples/data/: ALL_GHULFILES  Makefile  def_constants.ghul  def_macros.ghul  main.ghul  mapfile  types.ghul  world.ghul
examples/data/player/: party.ghul
examples/data/sprite_sets/: angband_sprite_set.ghul  frame_sprite_set.ghul  lost_dragon.ghul  mechanism_sprites.ghul  misc_added_sprite_set.ghul  moons_sprite_set.ghul  rune_font_sprite_set.ghul  rune_font_sprite_set_32x32.ghul  rune_font_sprite_set_8x16.ghul  sam_new_tiles_32x32.ghul  ultima_IV_font_sprite_set.ghul  ultima_IV_sprite_set.ghul
examples/data/tile_sheet_utils/: TileSheet.pm  reformat_tile_sheet.perl
examples/data/types/: chest_traps.ghul  containers.ghul  furniture.ghul  magical_fields.ghul  npc_party_defs.ghul  occupations.ghul  portal_types.ghul  projectiles.ghul  readable_items.ghul  species.ghul  spells.ghul  terrains.ghul  useable_items.ghul  vehicles.ghul  weapons.ghul  worn_items.ghul
examples/data/world/: astronomy.ghul  portals.ghul
examples/data/world/characters/: BlackBart_the_Shipwright.ghul  Deric.ghul  Doris.ghul  Gen.ghul  Olin_the_Ghast.ghul  Shroom_the_Hag.ghul  char_doris.ghul  inhabitants_of_britain.ghul  party_members.ghul
examples/data/world/conversations/: C_green_tower.ghul  C_misc_npcs.ghul  conversations.ghul
examples/data/world/maps/: M_blank_16x16.ghul  M_blank_19x19.ghul  M_blank_32x32.ghul  M_blank_64x64.ghul  M_dark_passage.ghul  M_prison_and_torture_chamber.ghul  M_secret_shrine.ghul  M_slime_cave.ghul  terrain_combat_maps.ghul
examples/data/world/maps/u4_u5/: all_ultima_maps.ghul  britain.med  lcb1.med  lcb2.med  skara.med  u5_world_map.med
examples/data/world/maps/yaur/: all_yaur_maps.ghul  castle_adare.xpm  yaur.naz  yaur.xpm
examples/data/world/mechanisms/: all_mechanisms.ghul
examples/data/world/places/: DarkPassage.ghul  ForestCave.ghul  Glasdrin.ghul  GoblinCaves.ghul  GreenTower.ghul  GreenTowerLower.ghul  GreenTowerLower_Map.ghul  MidWorld.ghul  P_cavernous_troll_deeps.ghul  P_empire_city.ghul  P_prison_and_torture_chamber.ghul  P_rom_camp.ghul  P_slime_cave.ghul  P_terrain_test.ghul  P_wilderness.ghul  all_places.ghul
examples/data/world/places/u4_u5/: P_britain.ghul  P_dark_passage.ghul  P_lcb_1.ghul  P_lcb_2.ghul  P_prison_and_torture_chamber.ghul  u4_u5_world.ghul
examples/data/world/places/yaur/: yaur_world.ghul
icons/: haxima.xcf
m4/: ChangeLog  Makefile.am  acinclude.m4
scripts/: ANNOUNCEMENT  RELEASE_CHECKOFF  apply-license-header  blenddat.txt  blendmap.pl  cvstochangelog.pl  dice_rolls.pl  ghul-indent  ghul-test-install  gpl.h  maptoxpm.pl  mergemap.pl  nazghul.iss  nazghulrun.au3  palette.txt  public-domain.h  remove-old-copyright-header  retab.html  run_nazghul  splitmap.pl  timesort_data  timesort_src  tocinator.pl  touch_all_src  unblenddat.txt  xpmtomap.pl
src/: Arms.cpp  Arms.h  Being.cpp  Being.h  Character.cpp  Character.h  Container.cpp  Container.h  Field.cpp  Field.h  Item.cpp  Item.h  Loader.cpp  Loader.h  Makefile.am  Makefile.in  Mech.cpp  Mech.h  Missile.cpp  Missile.h  NpcParty.cpp  NpcParty.h  Object.c  Object.cpp  Object.h  Party.cpp  Party.h  Portal.cpp  Portal.h  Reagent.cpp  Reagent.h  Spell.cpp  Spell.h  Trap.cpp  Trap.h  ai.c  ai.h  angband.c  applet.h  ascii.c  (+194 more)
win32/: Makefile  config.h  configure  readme.txt  res.rc  src_config.h
worlds/: Makefile.am  Makefile.in
worlds/haxima-1.001/: P_terrain_test.scm  abandoned-cellar.scm  abandoned-farm.scm  af-entry.scm  ai.scm  arms.scm  bakup.scm  beds.scm  bim.scm  bridge.scm  camping-map.scm  chanticleer.scm  class-bak.scm  class.scm  combat-maps.scm  containers.scm  conv.scm  door.scm  drawbridge.scm  earl.scm  effects.scm  enchanters-tower-zones.scm  enchanters-tower.scm  fields.scm  food.scm  game.scm  gen.scm  gregor.scm  gregors-hut-zones.scm  gregors-hut.scm  gwen.scm  haxima.scm  ifc.scm  ilya.scm  items.scm  jim.scm  john_iron.scm  kobj.scm  lever.scm  loc.scm  (+42 more)
worlds/haxima-1.001/tests/: DESCRIPTIONS.TXT  basic-night-time.scm  basic-party.scm  basic-time.scm  basic-wilderness-map.scm  char-enter.console.mstr  (+193 more)
worlds/haxima-1.002/: Makefile.am  abandoned-cellar.scm  abandoned-farm.scm  abe.scm  abigail.scm  ability.scm  absalot.scm  af-entry.scm  ai.scm  alchemist.scm  alex.scm  altar-room.scm  amy.scm  anaxes.scm  ancient-derelict.scm  angela.scm  angriss-lair.scm  angriss.scm  ankh-shrine.scm  anne.scm  arms.scm  bakup.scm  bandit-hideout.scm  bart.scm  bill.scm  bim.scm  blendterrains.scm  bole.scm  books.scm  brundegardt.scm  camping-map.scm  cast-ui.scm  chanticleer.scm  chester.scm  combat-maps.scm  containers.scm  conv.scm  crypt.scm  dank-cave.scm  demo.scm  (+204 more)
worlds/haxima-1.002/music/: Lute-and-recorder-ballad.mid  Makefile.am  Minuet-like-Mozart.mid  ballad.mid  bassoons-and-harpsichord.mid  credits.txt  double-trios.mid  dragon-quest.mid  dragon-slayer.mid  fair-camelot.mid  game-music2.mid  harpsichord-piece.mid  into-battle.mid  medieval-quest.mid  minstrel-dance.mid  music.scm  plainchant-recorder-trio.mid  wind-trio.mid
worlds/haxima-1.002/test/: 19x19.scm  arena.scm  cave.scm  dungeon.scm  forest.scm  island.scm  player.scm  tower.scm  wilderness.scm
worlds/haxima-1.003/: haxima.scm  kern-init.scm  naz.scm  utils.scm
worlds/template/: kern-init.scm  start-new-game.scm
(+80 files in other folders)
