

bin_PROGRAMS = nazghul

nazghul_SOURCES =		\
	angband.c \
        Arms.cpp \
        Arms.h \
        ascii.c \
        ascii.h \
        astar.c \
        astar.h \
        character.cpp \
        character.h \
        cmdwin.c \
        cmdwin.h \
        combat.c \
        combat.h \
        common.c \
        common.h \
        console.c \
        console.h \
        constants.h \
        Container.cpp \
        Container.h \
        conv.c \
        conv.h \
        cursor.cpp \
        cursor.h \
        debug.h \
        dup_constants.h \
        event.c \
        event.h \
        Field.h \
        floodfill.c \
        foogod.c \
        foogod.h \
        formation.h \
        game.c \
        game.h \
        hash.c \
        hash.h \
        heap.c \
        heap.h \
        images.c \
        images.h \
        Item.cpp \
        Item.h \
        knapsack.c \
        knapsack.h \
        lexer.c \
        lexer.h \
        list.h \
        Loader.cpp \
        Loader.h \
        los.c \
        los.h \
        Makefile \
        map.c \
        map.h \
        Mech.cpp \
        Mech.h \
        moongate.c \
        moongate.h \
        nazghul.c \
        NpcParty.cpp \
        NpcParty.h \
        object.c \
        object.h \
        occ.c \
        occ.h \
        olist.c \
        olist.h \
        pinfo.h \
        place.c \
        place.h \
        play.c \
        player.cpp \
        player.h \
        play.h \
        portal.h \
        Reagent.cpp \
        Reagent.h \
        sched.c \
        sched.h \
        screen.c \
        screen.h \
        sky.c \
        sky.h \
        sound.c \
        sound.h \
        species.c \
        species.h \
        Spell.cpp \
        Spell.h \
        sprite.c \
        sprite.h \
        status.c \
        status.h \
        terrain.c \
        terrain.h \
        terrain_map.c \
        terrain_map.h \
        Trap.cpp \
        Trap.h \
        tree.c \
        tree.h \
        util.c \
        util.h \
        vehicle.cpp \
        vehicle.h \
        wind.c \
        wind.h \
        wq.c \
        wq.h \
	Missile.cpp \
	Missile.h \
	cmd.c \
	cmd.h
